--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,35 @@
 body{
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
   text-transform: uppercase;
 }
 
-h1 .features-name{
-  font-size: 24px;
+.header-container-title{
+  font-size: 55px;
   color:#000;
-  font-weight:700;
+  font-weight:500;
 }
 
-h2 .index-content-title{
+.index-content-title{
   font-size: 18px;
+  color: #000;
+  font-weight: 700;
+}
+
+.write-us-title{
+  font-size: 45px;
+  color: #000;
+  font-weight: 500;
+}
+
+.feature-item-title{
+  font-size: 24px;
+  color: #000;
+  font-weight: 700;
+}
+
+.control-title{
+  font-size: 18px;
+  color: #000;
   font-weight: 700;
 }
