--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Roboto Regular";
+    src: local("Roboto Regular"),
+         url(../fonts/Roboto-Medium.ttf);
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -338,6 +344,7 @@ input[type=radio] {
   text-decoration: none;
   margin: 0;
   padding: 0;
+  font-size: 0;
 }
 
 .advantages-list{
@@ -718,13 +725,14 @@ input[type="checkbox"] {
 .catalog-items{
   float: right;
   width: 760px;
+  font-size: 0;
 }
 
 .catalog-item{
   position: relative;
   display: inline-block;
   width: 360px;
-  margin-right: 25px;
+  margin-right: 40px;
   margin-bottom: 36px;
   vertical-align: top;
   font-size: 14px;
